--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.8.4
   csv: ^5.0.1
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
