--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   supabase_flutter: ^2.8.4
   csv: ^5.0.1
   crypto: ^3.0.2
+  go_router: ^14.8.1
 
 dev_dependencies:
   flutter_test:
