--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,7 +76,7 @@ flutter:
 
   assets:
     - assets/pass.csv
-    - assets/images/Boeuf.png
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   #assets:
 
