--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
 
   go_router: ^14.8.1
   google_fonts: ^6.1.0
+  settings_ui: ^2.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
