--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   google_fonts: ^6.1.0
   settings_ui: ^2.0.0
   provider: ^6.1.2
+  flutter_form_builder: ^9.7.0
+  form_builder_validators: ^11.1.2
 
 dev_dependencies:
   flutter_test:
